# SearchPlusPlus

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  MODULE.bazel  README.md  vcpkg.json
.github/workflows/: ci.yml
bench/: CMakeLists.txt  indexing_throughput_bench.cpp  posting_list_bench.cpp  query_latency_bench.cpp  rerank_latency_bench.cpp
cmake/: spp_sanitizers.cmake  spp_warnings.cmake
data/: demo_corpus.jsonl  demo_judgments.jsonl  demo_mapping.json
docs/: ltr_training.md
examples/: CMakeLists.txt  README.md
examples/hello_search/: CMakeLists.txt  main.cpp
examples/http/: README.md  hello_search.sh
examples/python/: README.md  hello_search.py
include/spp/: spp.h
include/spp/analyze/: analyzer.h  token.h
include/spp/base/: bytes.h  expected.h  logging.h  status.h  types.h
include/spp/http/: http_message.h  http_parser.h  http_server.h  platform.h  router.h
include/spp/index/: document.h  index_reader.h  index_writer.h  manifest.h  mutable_segment.h  schema.h  segment_info.h  segment_reader.h  segment_writer.h  translog.h
include/spp/json/: json_parser.h  json_serializer.h  json_value.h
include/spp/query/: bm25_scorer.h  features.h  iterators.h  query_ast.h  query_parser.h  ranker.h  searcher.h
include/spp/server/: search_server.h
include/spp/store/: directory.h  file_io.h  platform.h  varbyte.h
models/: BUILD.bazel  catboost_model.cpp  catboost_model.h
python/: CMakeLists.txt  README.md
python/src/: searchplusplus.cpp
scripts/: README.md  bench_search.py  build.ps1  build.sh  compare_es.py  demo_bench_search.sh  demo_compare_es.sh  demo_train_ltr.sh  install.ps1  install.sh  train_ltr.py
src/: CMakeLists.txt
src/analyze/: standard_analyzer.cpp
src/base/: logging.cpp  status.cpp
src/http/: http_message.cpp  http_parser.cpp  http_server.cpp  platform.cpp  router.cpp
src/index/: index_writer.cpp  manifest.cpp  mutable_segment.cpp  schema.cpp  segment_reader.cpp  segment_writer.cpp  translog.cpp
src/json/: json_parser.cpp  json_serializer.cpp
src/query/: bm25_scorer.cpp  features.cpp  iterators.cpp  query_ast.cpp  query_parser.cpp  ranker.cpp  searcher.cpp
src/server/: search_server.cpp
src/store/: file_io.cpp  filesystem_directory.cpp  platform.cpp  varbyte.cpp
tests/: BUILD.bazel  CMakeLists.txt
tests/analyze/: standard_analyzer_test.cpp
tests/base/: expected_test.cpp  status_test.cpp
tests/http/: http_parser_test.cpp  http_server_test.cpp  test_client.h
tests/index/: index_writer_test.cpp  mutable_segment_test.cpp  schema_test.cpp  segment_roundtrip_test.cpp  translog_test.cpp
tests/integration/: crash_recovery_test.cpp  e2e_http_test.cpp  ltr_storage_test.cpp  nrt_test.cpp  rerank_test.cpp  search_concurrency_test.cpp
tests/json/: json_parser_test.cpp  json_serializer_test.cpp
tests/query/: bm25_test.cpp  features_test.cpp  iterators_test.cpp  query_parser_test.cpp  ranker_test.cpp  searcher_test.cpp
tests/store/: file_io_test.cpp  filesystem_directory_test.cpp  varbyte_test.cpp
tools/: CMakeLists.txt
tools/spp_export_features/: BUILD.bazel  CMakeLists.txt  main.cpp
tools/spp_index/: BUILD.bazel  CMakeLists.txt  main.cpp
tools/spp_search/: BUILD.bazel  CMakeLists.txt  main.cpp
tools/spp_serve/: BUILD.bazel  CMakeLists.txt  main.cpp
